name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*, blog
                  , hakyll == 4.7.*
  ghc-options:      -threaded
  default-language: Haskell2010
library
  hs-source-dirs:      src
  build-depends:    base == 4.*, old-locale, time, time-locale-compat
  Exposed-modules: Utils.Time
  default-language: Haskell2010
